--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,44 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+body, html{
+    background-color: darkgray;
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+
+}
+section#login{
+    background-color: white;
+    width: 300px;
+    height: 600px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.449);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+section>div#imagem{
+    display: block;
+    background:darkgrey url(../imagens/galaxia.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+
+
+}
+section#login>div#formulario{
+    display: block;
+    padding: 10px;
+
+}
