--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login{
         width: 80vw;
+        height: 310px;
 
     }
     section#login>div#imagem{
@@ -20,6 +21,7 @@
     }
     div#formulario>p{
         font-size: 1em;
+        margin: 6px 0px;
     }
 }
 @media screen and (min-width:992px) {
@@ -28,6 +30,7 @@
     }
     section#login{
         width:950px ;
+        height: 430px;
     }
     section#login>div#imagem{
         float: left;
@@ -41,6 +44,7 @@
     }
     div#formulario>p{
         font-size: 1.2em;
+        margin: 20px 0px;
     }
     
 }
