--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,15 +10,17 @@ body, html{
     background-color: rgba(177, 172, 172, 0.915);
     height: 100vh;
     width: 100vw;
+    
 }
 main{
     position: relative;
     height: 100vh;
     width: 100vw;
+   
 
 }
 section#login{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     width: 300px;
     height: 600px;
     border-radius: 20px;
@@ -26,11 +28,10 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
-
     transition: width 0.3s height 0.3s;
     transition-timing-function:ease ;
+    transform: translate(-50%, -50%);
 }
 section>div#imagem{
     display: block;
@@ -52,3 +53,69 @@ div#formulario>h1{
 div#formulario>p{
     font-size: 0.9em;
 }
+
+form>div.campo{
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.780);
+    border: 2px solid black;
+    color: white;
+    border-radius: 6px;
+    margin:5px 0px;
+
+}
+div.campo> label{
+    display: none;
+}
+div.campo>span{
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo>input{
+    background-color: white;
+    font-size: 1.2em;
+    width:calc(100% - 44.9px) ;
+    height: 100%;
+    border: 0px;
+    border-radius: 6px;
+    padding: 4px;
+    transform: translateY(-11.3px);
+}
+form>input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.792);
+    color: white;
+    border: none;
+    border-radius: 6px;
+}
+form>input[type=submit]:hover{
+    background-color: rgba(26, 13, 13, 0.822);
+    cursor: pointer;
+}
+form> a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:rgba(0, 0, 0, 0.792);
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.825);
+    color: red;
+    text-decoration: none;
+    padding-top: 7px;
+    margin-top: 5px;
+}
+form> a.botao:hover{
+    background-color:rgba(26, 13, 13, 0.822) ;
+}
+form> a.botao> span{
+    font-size: 0.8em;   
+}
+
